# filter-support

./: .gitignore  README.md  pyproject.toml
data/models/: model_superphot_early.pt  model_superphot_early_redshift.pt  model_superphot_redshift.pt
src/filter_support/: alerts_consumer.py  first_alert.json  superphot_boom.py
